[gd_scene load_steps=78 format=2]

[ext_resource path="res://scripts/Special_Projectile.gd" type="Script" id=1]
[ext_resource path="res://art/SpecialProjectiles/sp5.png" type="Texture" id=2]
[ext_resource path="res://art/SpecialProjectiles/sp6.png" type="Texture" id=3]
[ext_resource path="res://art/SpecialProjectiles/sp4.png" type="Texture" id=4]
[ext_resource path="res://art/SpecialProjectiles/sp2.png" type="Texture" id=5]
[ext_resource path="res://art/SpecialProjectiles/sp3.png" type="Texture" id=6]
[ext_resource path="res://art/SpecialProjectiles/sp1.png" type="Texture" id=7]
[ext_resource path="res://art/SpecialProjectiles/sp_core.png" type="Texture" id=9]
[ext_resource path="res://art/SpecialProjectiles/bad_hit_burst.png" type="Texture" id=10]
[ext_resource path="res://art/SpecialProjectiles/good_hit_burst.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 1330, 262, 266 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 1330, 262, 266 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 1330, 262, 266 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 1330, 262, 266 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 1330, 262, 266 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 1064, 262, 266 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 1064, 262, 266 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 1064, 262, 266 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 1064, 262, 266 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 1064, 262, 266 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 798, 262, 266 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 798, 262, 266 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 798, 262, 266 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 798, 262, 266 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 798, 262, 266 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 532, 262, 266 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 532, 262, 266 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 532, 262, 266 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 532, 262, 266 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 532, 262, 266 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 266, 262, 266 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 266, 262, 266 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 266, 262, 266 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 266, 262, 266 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 266, 262, 266 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1048, 0, 262, 266 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 786, 0, 262, 266 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 524, 0, 262, 266 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 262, 0, 262, 266 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 262, 266 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 1152, 192, 192 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "bad_hit",
"speed": 29.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "good_hit",
"speed": 33.0
} ]

[node name="Special_Projectile" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource( 1 )
speed = 750

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Core" type="Sprite" parent="." groups=["Components"]]
position = Vector2( 70, 16 )
scale = Vector2( 0.1, 0.1 )
z_index = -1
texture = ExtResource( 9 )
offset = Vector2( -710, -168.423 )

[node name="Component1" type="Sprite" parent="." groups=["Components"]]
visible = false
rotation = -1.57079
texture = ExtResource( 7 )
centered = false
offset = Vector2( -32, 0 )

[node name="Component2" type="Sprite" parent="." groups=["Components"]]
visible = false
position = Vector2( 2.38419e-07, 0 )
rotation = 0.785397
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -7.77817, -7.30678 )
flip_h = true

[node name="Component3" type="Sprite" parent="." groups=["Components"]]
visible = false
position = Vector2( 2.38419e-07, 0 )
rotation = 0.785397
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -45.2548, -32 )
flip_h = true
flip_v = true

[node name="Component4" type="Sprite" parent="." groups=["Components"]]
visible = false
rotation = -1.57079
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -19.2103, -5.33329 )
flip_h = true
flip_v = true

[node name="Component5" type="Sprite" parent="." groups=["Components"]]
visible = false
rotation = 1.57079
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -27.6257, -29.341 )
flip_h = true
flip_v = true

[node name="Component6" type="Sprite" parent="." groups=["Components"]]
visible = false
rotation = -2.35619
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -37.5427, -16.7078 )
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="BurstAnimation" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 33 )
animation = "good_hit"
frame = 3

[node name="BlowTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BlowTimer" to="." method="_on_BlowTimer_timeout"]
